package model.cart;

public interface Prototype {
    public Prototype clone();
}
